--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://lzFelipee.github.io/",
+  "homepage": "https://lzFelipee.github.io/projeto_weeb",
   "name": "my-js-frameworks-app",
   "private": true,
   "version": "0.0.0",
